tests/sksl/errors/ArgumentMismatch.glsl
### Compilation failed:

error: 6: expected 'float', but found 'bool'
1 error
